examples/federation-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: federation-client
spec:
  ports:
  - name: grpc-mcp
    port: 15010
    targetPort: grpc-mcp
    protocol: TCP
    appProtocol: grpc
  - name: grpc-fds
    port: 15020
    targetPort: grpc-fds
    protocol: TCP
    appProtocol: grpc
  selector:
    app.kubernetes.io/name: federation-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: federation-client
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: federation-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: federation-client
    spec:
      serviceAccount: federation-client
      containers:
      - name: server
        image: quay.io/jewertow/federation-controller:federation-client-1
        args:
        - --meshPeers
        - '{"spec":{"remote":{"addresses":["federation-controller.istio-system.svc.cluster.local"],"ports":{"dataPlane":15443,"discovery":15020}}}}'
        - --exportedServiceSet
        - '{"rules":[{"type":"LabelSelector","labelSelectors":[{"matchLabels":{"export-service":"true"}}]}]}'
        - --importedServiceSet
        - '{"type":"LabelSelector","labelSelectors":[{"matchLabels":{"export-service":"true"}}]}'
        ports:
        - name: grpc-mcp
          containerPort: 15010
        - name: grpc-fds
          containerPort: 15020
