examples/federation.yaml
apiVersion: v1
kind: Service
metadata:
  name: federation-controller
spec:
  ports:
  - name: grpc
    port: 15010
    targetPort: grpc
    protocol: TCP
  selector:
    app.kubernetes.io/name: federation-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: federation-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: federation-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: federation-controller
    spec:
      serviceAccount: federation-controller
      containers:
      - name: server
        image: quay.io/jewertow/federation-controller:latest
        args:
        - --meshPeers
        - '{"spec":{"remote":{"addresses":["lb-1234567890.us-east-1.elb.amazonaws.com","192.168.10.56"],"ports":{"dataPlane":15443,"discoery":15020}}}}'
        - --exportedServiceSet
        - '{"type":"LabelSelector","labelSelectors":[{"matchLabels":{"export-service":"true"}}]}'
        - --importedServiceSet
        - '{"type":"LabelSelector","labelSelectors":[{"matchLabels":{"export-service":"true"}}]}'
        ports:
        - name: grpc
          containerPort: 15010
