examples/envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-sni-to-listener
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: federation-ingress-gateway
  configPatches:
  - applyTo: FILTER_CHAIN
    match:
      listener:
        name: "0.0.0.0_15443"
        filterChain:
          sni: "outbound_.15080_._.federation-discovery-service.istio-system.svc.cluster.local"
    patch:
      operation: MERGE
      value:
        filter_chain_match:
          server_names:
          - "federation-discovery-service.istio-system.svc.cluster.local"
